// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Recording should return well-formed XML to initial request 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Say language="en-GB" voice="Polly.Emma-Neural">
        Please record your message, then press the hash key.
    </Say>
    <Record method="POST" finishOnKey="#" playBeep="true" trim="trim-silence" maxLength="5"/>
</Response>
`;

exports[`Recording should return well-formed XML to subsequent response 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Say language="en-GB" voice="Polly.Emma-Neural">
        Awesome! Here's what you sounded like:
    </Say>
    <Play>
        https://my-file-server/voice.wav
    </Play>
    <Redirect method="GET">
        ./count
    </Redirect>
</Response>
`;
